--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,14 +1,32 @@
-<style></style>
-
 <main class="todo-container">
   <div class="title">
     <h1><i class="bi bi-journal-check"></i> Lista de Tarefas</h1>
   </div>
   <div class="add-task">
-    <input type="text" [(ngModel)]="newTask" placeholder="Nova tarefa" />
+    <input
+      type="text"
+      [(ngModel)]="newTask"
+      (keyup)="addTaskByEnter($event)"
+      placeholder="Nova tarefa"
+    />
     <button (click)="addTask()"><i class="bi bi-plus-circle"></i></button>
-    <!-- <i class="bi bi-trash-fill"></i> -->
   </div>
+  <ul class="task-list">
+    <li
+      *ngFor="let todoItem of todoList; let i = index"
+      [ngClass]="{ completed: todoItem.completed }"
+    >
+      <input
+        type="checkbox"
+        [(checked)]="todoItem.completed"
+        (change)="toggleComplete(i)"
+      />
+      <span [class.completed]="todoItem.completed">{{ todoItem.task }}</span>
+      <button (click)="deleteTask(todoItem.id)">
+        <i class="bi bi-trash-fill"></i>
+      </button>
+    </li>
+  </ul>
 </main>
 
 <router-outlet />
